--- a/css/style.css
+++ b/css/style.css
@@ -295,7 +295,7 @@ body{
 
 .container > a:hover{
     color: rgb(134, 131, 131);
-    background-color:azure;
+    background-color:rgb(226, 226, 226);
     text-decoration: none;
 }
 
