--- a/css/styles/navbar.css
+++ b/css/styles/navbar.css
@@ -39,13 +39,13 @@ nav{
     background-color: rgb(244, 244, 244);
 }
 
-.search-bar > button{
+.submit{
     background-color: transparent;
     border: none;
     outline-width: 0;
 }
 
-.search-bar > input{
+.search-field{
     border:none;
     outline-width: 0;
     width: 88%;
