--- a/css/style.css
+++ b/css/style.css
@@ -3,5 +3,8 @@
 @import "./styles/section.css";
 
 body{
-    justify-items: center;
+    margin: 0;
+    padding: 0;
+    padding-bottom: 10px;
+    width: 100%;
 }
