--- a/css/styles/section.css
+++ b/css/styles/section.css
@@ -49,6 +49,7 @@
 .explain{
     border: 1px solid rgb(188, 186, 186);
     padding-top: 2%;
+    padding-bottom: 2%;
     padding-left: 4%;
     padding-right: 4%;
 }
