--- a/css/styles/header.css
+++ b/css/styles/header.css
@@ -1,29 +1,30 @@
-header{
+.header_{
     display: flex;
     flex-wrap: wrap-reverse;
     width: 100%;
     margin-top: 4px;
+    margin-bottom: 50px;
     padding: auto;
     justify-content: space-between;
     align-items: center;
     background-color: rgb(249 249 249)
 }
 
-.header-items{
+.header-items_{
     display: inline-block;   
 }
 
-.fig{
+.fig_{
     width: 100%;
     display: flex;
     justify-content: center;
 }
 
-.fig > img{
+.fig_ > img{
     width: 100%;
     max-width: 350px;
 }
-.content{
+.content_{
     background-color: white;
     padding: 2%;
     width: 100%;
@@ -41,19 +42,19 @@ header{
 /* small screen */
 
 @media screen and (min-width: 801px) {
-    header{
+    .header_{
         flex-wrap: nowrap;
-        width: 75%;
+        width: 80%;
         margin-left: auto;
         margin-right: auto;
         padding-left: 70px;
         padding-right: 70px;
     }
 
-    .content{
+    .content_{
         width: 50%;
     }
-    .fig{
+    .fig_{
         justify-content: flex-end;
         width: 100%;
     }
