--- a/css/styles/section.css
+++ b/css/styles/section.css
@@ -92,20 +92,27 @@
     justify-content: center;
 }
 
-.container_ > a{
+.cards_{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+
+.course-cards_{
     display: flex;
     width: calc(100% / 1);
     justify-content: center;
     text-decoration: none;
 }
 
-.container_ > a:hover{
+.course-cards_:hover{
     color: rgb(134, 131, 131);
     background-color: whitesmoke;
     text-decoration: none;
 }
 
-.container_ > a:visited{
+.course-cards_:visited{
     color: black;
     text-decoration: none;
 }
@@ -150,14 +157,22 @@ del{
 }
 
 
+.carousel-control-prev, .carousel-control-next{
+    background-color: rgb(0, 0, 0);
+    width: 40px;
+    height: 40px;
+    top: 25%;
+    border-radius: 50%;
+}
+
 @media screen and (min-width: 550px) {
-    .container_ > a{
+    .course-cards_{
         width: calc(100%/2);
     }
 }
 
 @media screen and (min-width: 800px) {
-    .container_ > a{
+    .course-cards_{
         width: calc(100%/3);
     }
 }
@@ -172,7 +187,7 @@ del{
 }
 
 @media screen and (min-width: 1200px) {
-    .container_ > a{
+    .course-cards_{
         width: calc(100%/4);
     }
 }
